--- a/tsconfig.cypress-ct.json
+++ b/tsconfig.cypress-ct.json
@@ -9,6 +9,7 @@
   ],
   "exclude": [],
   "compilerOptions": {
+    "baseUrl": ".",
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.cypress-ct.tsbuildinfo"
   }
