--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.1.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
